--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: clean_all_flutter_build
-description: A sample command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
-# author: Caijinglong <email@example.com>
+description: clean flutter build files.
+version: 1.0.0
+homepage: https://github.com/CaiJingLong/clean_flutter_builds
+author: Caijinglong <cjl_spy@163.com>
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   shell: ^1.0.1
-#  path: ^1.4.1
 
 dev_dependencies:
   test: ^1.0.0
+
+executables:
+  clean_flutter_build_file:
